modified (merged) data structure of products on shopping list - now carries everything necessary for updating the list

--- a/code/app/src/main/res/layout/fragment_details_product.xml
+++ b/code/app/src/main/res/layout/fragment_details_product.xml
@@ -55,14 +55,14 @@
             android:layout_marginBottom="@dimen/vertical_margin_image"
             android:layout_marginStart="@dimen/horizontal_margin_small"
             android:layout_marginEnd="@dimen/horizontal_margin_small"
-            android:contentDescription="@{viewModel.smobProductDetailsItem.description}"
+            android:contentDescription="@{viewModel.smobProductDetailsItem.productDescription}"
             android:scaleType="fitCenter"
             app:layout_constraintTop_toTopOf="@id/tvHeading"
             app:layout_constraintBottom_toTopOf="@+id/clTitle"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
-            app:itemImage="@{viewModel.smobProductDetailsItem.imageUrl}"
+            app:itemImage="@{viewModel.smobProductDetailsItem.productImageUrl}"
             tools:src="@drawable/smob_1"
             />
 
@@ -113,7 +113,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/horizontal_margin_small"
                 android:layout_marginEnd="@dimen/horizontal_margin_huge"
-                android:text="@{viewModel.smobProductDetailsItem.name}"
+                android:text="@{viewModel.smobProductDetailsItem.productName}"
                 tools:text="Some product name"
                 android:textSize="@dimen/label_text_size"
                 app:layout_constraintBaseline_toBaselineOf="@id/tvAnchorTitle"
@@ -171,7 +171,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/horizontal_margin_small"
                 android:layout_marginEnd="@dimen/horizontal_margin_huge"
-                android:text="@{viewModel.smobProductDetailsItem.description}"
+                android:text="@{viewModel.smobProductDetailsItem.productDescription}"
                 tools:text="Some product description"
                 android:textSize="@dimen/label_text_size"
                 app:layout_constraintBaseline_toBaselineOf="@id/tvAnchorDesc"
@@ -230,7 +230,7 @@
                 android:layout_marginStart="@dimen/horizontal_margin_small"
                 android:layout_marginEnd="@dimen/horizontal_margin_huge"
                 android:layout_marginBottom="@dimen/vertical_margin_large"
-                android:text="@{viewModel.smobProductDetailsItem.category.main.toString()}"
+                android:text="@{viewModel.smobProductDetailsItem.productCategory.main.toString()}"
                 tools:text="Some product category"
                 android:textSize="@dimen/label_text_size"
                 app:layout_constraintBaseline_toBaselineOf="@id/tvAnchorCatMain"
@@ -289,7 +289,7 @@
                 android:layout_marginStart="@dimen/horizontal_margin_small"
                 android:layout_marginEnd="@dimen/horizontal_margin_huge"
                 android:layout_marginBottom="@dimen/vertical_margin_large"
-                android:text="@{viewModel.smobProductDetailsItem.category.sub.toString()}"
+                android:text="@{viewModel.smobProductDetailsItem.productCategory.sub.toString()}"
                 tools:text="Product sub-category"
                 android:textSize="@dimen/label_text_size"
                 app:layout_constraintBaseline_toBaselineOf="@id/tvAnchorCatSub"
@@ -348,7 +348,7 @@
                 android:layout_marginStart="@dimen/horizontal_margin_small"
                 android:layout_marginEnd="@dimen/horizontal_margin_huge"
                 android:layout_marginBottom="@dimen/vertical_margin_large"
-                android:text="@{viewModel.smobProductDetailsItem.activity.date}"
+                android:text="@{viewModel.smobProductDetailsItem.productActivity.date}"
                 tools:text="Last purchased"
                 android:textSize="@dimen/label_text_size"
                 app:layout_constraintBaseline_toBaselineOf="@id/tvAnchorActDate"
@@ -407,7 +407,7 @@
                 android:layout_marginStart="@dimen/horizontal_margin_small"
                 android:layout_marginEnd="@dimen/horizontal_margin_huge"
                 android:layout_marginBottom="@dimen/vertical_margin_large"
-                android:text="@{Long.toString(viewModel.smobProductDetailsItem.activity.reps)}"
+                android:text="@{Long.toString(viewModel.smobProductDetailsItem.productActivity.reps)}"
                 tools:text="repeat purchases"
                 android:textSize="@dimen/label_text_size"
                 app:layout_constraintBaseline_toBaselineOf="@id/tvAnchorActReps"
