lifecycle awareness extended / corrected

--- a/code/app/src/main/res/layout/fragment_administration_select.xml
+++ b/code/app/src/main/res/layout/fragment_administration_select.xml
@@ -9,9 +9,15 @@
             type="com.tanfra.shopmob.smob.activities.administration.AdminViewModel" />
     </data>
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        >
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:background="@color/secondaryLightColor">
 
             <Button
@@ -33,5 +39,7 @@
                 />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
 
 </layout>
