--- a/code/app/src/main/res/layout/fragment_planning_shop_edit.xml
+++ b/code/app/src/main/res/layout/fragment_planning_shop_edit.xml
@@ -10,92 +10,101 @@
             type="com.tanfra.shopmob.smob.activities.planning.shopEdit.PlanningShopEditViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/clPlanningShopEdit"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
-        tools:context="com.tanfra.shopmob.smob.activities.planning.shopList.PlanningShopEditFragment">
+        android:fillViewport="true"
+        >
 
-
-    <EditText
-            android:id="@+id/smobItemTitle"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/clPlanningShopEdit"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/smob_item_title"
-            android:autofillHints="@string/smob_item_title"
-            android:inputType="textCapSentences|textAutoCorrect"
-            android:text="@={viewModel.smobShopName}"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            tools:context="com.tanfra.shopmob.smob.activities.planning.shopList.PlanningShopEditFragment">
+
 
         <EditText
-            android:id="@+id/smobItemDescription"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="start"
-            android:hint="@string/smob_item_desc"
-            android:autofillHints="@string/smob_item_desc"
-            android:inputType="textCapSentences|textAutoCorrect"
-            android:lines="10"
-            android:text="@={viewModel.smobShopDescription}"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/smobItemTitle"
-            />
+                android:id="@+id/smobItemTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/smob_item_title"
+                android:autofillHints="@string/smob_item_title"
+                android:inputType="textCapSentences|textAutoCorrect"
+                android:text="@={viewModel.smobShopName}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                />
 
-        <TextView
-            android:id="@+id/selectLocation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?attr/selectableItemBackground"
-            android:clickable="true"
-            android:focusable="true"
-            android:gravity="center_vertical"
-            android:text="@string/smob_item_location"
-            android:textColor="@color/black"
-            app:drawableStartCompat="@drawable/ic_location"
-            app:drawableLeftCompat="@drawable/ic_location"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/smobItemDescription"
-            />
+            <EditText
+                android:id="@+id/smobItemDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:hint="@string/smob_item_desc"
+                android:autofillHints="@string/smob_item_desc"
+                android:inputType="textCapSentences|textAutoCorrect"
+                android:lines="10"
+                android:text="@={viewModel.smobShopDescription}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/smobItemTitle"
+                />
 
-        <TextView
-            android:id="@+id/selectedLocation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/margin_normal"
-            android:text="@{viewModel.smobShopType.toString()}"
-            android:textColor="@color/black"
-            app:layout_constraintBottom_toBottomOf="@id/selectLocation"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/selectLocation"
-            tools:text="Location" />
+            <TextView
+                android:id="@+id/selectLocation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:gravity="center_vertical"
+                android:text="@string/smob_item_location"
+                android:textColor="@color/black"
+                app:drawableStartCompat="@drawable/ic_location"
+                app:drawableLeftCompat="@drawable/ic_location"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/smobItemDescription"
+                />
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/saveSmobItem"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_normal"
-            app:fadeVisible="@{!viewModel.showLoading.booleanValue()}"
-            android:src="@drawable/ic_save"
-            app:fabSize="normal"
-            app:layout_anchorGravity="bottom|right|end"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:contentDescription="@string/save_smob_item" />
+            <TextView
+                android:id="@+id/selectedLocation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/margin_normal"
+                android:text="@{viewModel.smobShopType.toString()}"
+                android:textColor="@color/black"
+                app:layout_constraintBottom_toBottomOf="@id/selectLocation"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@id/selectLocation"
+                tools:text="Location" />
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            app:fadeVisible="@{viewModel.showLoading.booleanValue()}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/saveSmobItem"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/margin_normal"
+                app:fadeVisible="@{!viewModel.showLoading.booleanValue()}"
+                android:src="@drawable/ic_save"
+                app:fabSize="normal"
+                app:layout_anchorGravity="bottom|right|end"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:contentDescription="@string/save_smob_item" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                app:fadeVisible="@{viewModel.showLoading.booleanValue()}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
+
 </layout>
