--- a/code/app/src/main/res/layout/fragment_details_product.xml
+++ b/code/app/src/main/res/layout/fragment_details_product.xml
@@ -20,9 +20,9 @@
             android:id="@+id/clSmobProductDetails"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/vertical_margin_small"
             android:layout_marginStart="@dimen/horizontal_margin_small"
             android:layout_marginEnd="@dimen/horizontal_margin_small"
-            android:layout_marginTop="@dimen/vertical_margin_huge"
             >
 
 
@@ -371,6 +371,7 @@
                 android:id="@+id/clActivityReps"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/vertical_margin_small"
                 app:layout_constraintTop_toBottomOf="@id/clActivityDate"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
