--- a/code/app/src/main/res/layout/fragment_details_shop.xml
+++ b/code/app/src/main/res/layout/fragment_details_shop.xml
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_marginStart="@dimen/horizontal_margin_small"
             android:layout_marginEnd="@dimen/horizontal_margin_small"
-            android:layout_marginTop="@dimen/vertical_margin_large"
+            android:layout_marginTop="@dimen/vertical_margin_small"
             android:layout_height="wrap_content"
             >
 
@@ -372,6 +372,7 @@
                 android:id="@+id/clBusinessHours"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/vertical_margin_large"
                 app:layout_constraintTop_toBottomOf="@id/clShopCategory"
                 app:layout_constraintBottom_toTopOf="@id/btFloorPlan"
                 app:layout_constraintStart_toStartOf="parent"
@@ -432,7 +433,7 @@
                 android:layout_width="@dimen/button_width"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/horizontal_margin_small"
-                android:layout_marginTop="@dimen/vertical_margin_large"
+                android:layout_marginBottom="@dimen/vertical_margin_small"
                 android:paddingStart="@dimen/button_padding"
                 android:paddingEnd="@dimen/button_padding"
                 android:text="@string/floor_plan"
