--- a/code/app/src/main/res/values/dimens.xml
+++ b/code/app/src/main/res/values/dimens.xml
@@ -15,6 +15,7 @@
     <dimen name="icon_bottom_margin">24dp</dimen>
     <dimen name="title_bottom_margin">16dp</dimen>
 
+    <dimen name="vertical_margin_small">20dp</dimen>
     <dimen name="vertical_margin_large">40dp</dimen>
     <dimen name="vertical_margin_huge">100dp</dimen>
     <dimen name="vertical_margin_image">40dp</dimen>
