--- a/code/app/src/main/res/layout/activity_planning.xml
+++ b/code/app/src/main/res/layout/activity_planning.xml
@@ -4,19 +4,38 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.drawerlayout.widget.DrawerLayout
+            android:id="@+id/drawerLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".smob.ui.planning.SmobPlanningActivity">
+            android:fitsSystemWindows="true"
+            >
 
-                <androidx.fragment.app.FragmentContainerView
-                    android:id="@+id/nav_host_fragment_planning"
-                    android:name="androidx.navigation.fragment.NavHostFragment"
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:defaultNavHost="true"
-                    app:navGraph="@navigation/nav_graph_planning" />
+                    tools:context=".smob.ui.planning.SmobPlanningActivity">
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                        <androidx.fragment.app.FragmentContainerView
+                            android:id="@+id/nav_host_fragment_planning"
+                            android:name="androidx.navigation.fragment.NavHostFragment"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            app:defaultNavHost="true"
+                            app:navGraph="@navigation/nav_graph_planning" />
+
+                        <com.google.android.material.navigation.NavigationView
+                            android:id="@+id/navView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="start"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:menu="@menu/navdrawer_menu"
+                            app:headerLayout="@layout/nav_header"
+                            />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.drawerlayout.widget.DrawerLayout>
 
 </layout>
