--- a/code/app/src/main/res/navigation/nav_graph_shopping.xml
+++ b/code/app/src/main/res/navigation/nav_graph_shopping.xml
@@ -2,12 +2,14 @@
 <navigation
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph_shopping"
-    app:startDestination="@id/smobShoppingActivity">
+    app:startDestination="@id/smobShoppingZonesFragment">
 
-    <activity
-        android:id="@+id/smobShoppingActivity"
-        android:name="com.tanfra.shopmob.smob.ui.shopping.SmobShoppingActivity"
-        android:label="Smob Shopping Activity" />
+    <fragment
+        android:id="@+id/smobShoppingZonesFragment"
+        android:name="com.tanfra.shopmob.smob.ui.shopping.SmobShoppingZonesFragment"
+        android:label="@string/app_name_shopping_zones"
+        tools:layout="@layout/fragment_shopping_zones" />
 
 </navigation>
