--- a/code/app/src/main/res/layout/activity_planning.xml
+++ b/code/app/src/main/res/layout/activity_planning.xml
@@ -8,33 +8,26 @@
             android:id="@+id/drawerLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
+            tools:context=".smob.ui.planning.SmobPlanningActivity"
             >
 
-                <androidx.constraintlayout.widget.ConstraintLayout
+                <androidx.fragment.app.FragmentContainerView
+                    android:id="@+id/nav_host_fragment_planning"
+                    android:name="androidx.navigation.fragment.NavHostFragment"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    tools:context=".smob.ui.planning.SmobPlanningActivity">
+                    app:defaultNavHost="true"
+                    app:navGraph="@navigation/nav_graph_planning" />
 
-                        <androidx.fragment.app.FragmentContainerView
-                            android:id="@+id/nav_host_fragment_planning"
-                            android:name="androidx.navigation.fragment.NavHostFragment"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            app:defaultNavHost="true"
-                            app:navGraph="@navigation/nav_graph_planning" />
-
-                        <com.google.android.material.navigation.NavigationView
-                            android:id="@+id/navView"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:layout_gravity="start"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:menu="@menu/navdrawer_menu"
-                            app:headerLayout="@layout/nav_header"
-                            />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                <com.google.android.material.navigation.NavigationView
+                    android:id="@+id/navView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="start"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:menu="@menu/navdrawer_menu"
+                    app:headerLayout="@layout/nav_header"
+                    />
 
         </androidx.drawerlayout.widget.DrawerLayout>
 
