--- a/code/app/src/main/res/menu/navdrawer_menu.xml
+++ b/code/app/src/main/res/menu/navdrawer_menu.xml
@@ -5,5 +5,9 @@
             android:id="@+id/smobPlanningShopListFragment"
             android:icon="@drawable/ic_baseline_shopping_cart_24"
             android:title="@string/shop_list" />
+        <item
+            android:id="@+id/smobAdminSelectFragment"
+            android:icon="@drawable/ic_baseline_admin_panel_settings_24"
+            android:title="@string/admin" />
     </group>
 </menu>
