--- a/code/app/src/main/res/navigation/nav_graph_planning.xml
+++ b/code/app/src/main/res/navigation/nav_graph_planning.xml
@@ -10,6 +10,13 @@
         android:name="com.tanfra.shopmob.smob.ui.planning.SmobPlanningActivity"
         android:label="Planning" />
 
+    <!-- cross activity navigation made easy... -->
+    <fragment
+        android:id="@+id/smobAdminSelectFragment"
+        android:name="com.tanfra.shopmob.smob.ui.administration.AdminSelectFragment"
+        android:label="Administration Selector">
+    </fragment>
+
     <!-- cross activity navigation made easy...
          https://stackoverflow.com/questions/62214514/navigate-from-one-activity-to-another-with-navigation-component
     <activity
