--- a/code/app/src/main/res/layout/fragment_planning_lists_edit.xml
+++ b/code/app/src/main/res/layout/fragment_planning_lists_edit.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
             name="viewModel"
-            type="com.tanfra.shopmob.smob.ui.planning.productEdit.PlanningProductEditViewModel" />
+            type="com.tanfra.shopmob.smob.ui.planning.listsEdit.PlanningListsEditViewModel" />
     </data>
 
     <ScrollView
@@ -23,63 +22,35 @@
             android:background="@color/white">
 
             <EditText
-                android:id="@+id/smobItemTitle"
+                android:id="@+id/smobListName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/smob_item_title"
-                android:autofillHints="@string/smob_item_title"
+                android:hint="@string/smob_list_name"
+                android:autofillHints="@string/smob_list_name"
                 android:inputType="textCapSentences|textAutoCorrect"
-                android:text="@={viewModel.smobProductName}"
+                android:text="@={viewModel.smobListName}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 />
 
             <EditText
-                android:id="@+id/smobItemDescription"
+                android:id="@+id/smobListDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="start"
-                android:hint="@string/smob_item_desc"
-                android:autofillHints="@string/smob_item_desc"
+                android:hint="@string/smob_list_desc"
+                android:autofillHints="@string/smob_list_desc"
                 android:inputType="textCapSentences|textAutoCorrect"
                 android:lines="10"
-                android:text="@={viewModel.smobProductDescription}"
+                android:text="@={viewModel.smobListDescription}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/smobItemTitle"
+                app:layout_constraintTop_toBottomOf="@id/smobListName"
                 />
-
-            <TextView
-                android:id="@+id/selectLocation"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="?attr/selectableItemBackground"
-                android:clickable="true"
-                android:focusable="true"
-                android:gravity="center_vertical"
-                android:text="@string/smob_item_location"
-                android:textColor="@color/black"
-                app:drawableStartCompat="@drawable/ic_location"
-                app:drawableLeftCompat="@drawable/ic_location"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/smobItemDescription"
-                />
-
-            <TextView
-                android:id="@+id/selectedLocation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/margin_normal"
-                android:text="@{viewModel.smobProductCategory.main.toString()}"
-                android:textColor="@color/black"
-                app:layout_constraintBottom_toBottomOf="@id/selectLocation"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/selectLocation"
-                tools:text="Location" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/saveSmobItem"
+                android:id="@+id/saveSmobList"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/margin_normal"
@@ -89,7 +60,7 @@
                 app:layout_anchorGravity="bottom|right|end"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:contentDescription="@string/save_smob_item" />
+                android:contentDescription="@string/save_smob_shop" />
 
             <ProgressBar
                 android:id="@+id/progressBar"
@@ -97,6 +68,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 app:fadeVisible="@{viewModel.showLoading.booleanValue()}"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
