--- a/code/app/src/main/res/values/dimens.xml
+++ b/code/app/src/main/res/values/dimens.xml
@@ -29,6 +29,7 @@
     <dimen name="image_header_height">120dp</dimen>
     <dimen name="invisible_gap_details">30sp</dimen>
     <dimen name="button_width">200dp</dimen>
+    <dimen name="image_size_tiny">50dp</dimen>
     <dimen name="image_size_small">100dp</dimen>
     <dimen name="image_size_medium">200dp</dimen>
     <dimen name="image_size_large">600dp</dimen>
