split swipeActionHandler in concrete (list dependent) and generic (base) part

--- a/code/app/src/main/res/layout/smob_lists_item.xml
+++ b/code/app/src/main/res/layout/smob_lists_item.xml
@@ -16,6 +16,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/padding_medium"
+        android:foregroundTint="@color/swipePrimaryColor"
+        app:statusColor="@{item.itemStatus}"
         app:fadeVisible="@{true}">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -50,7 +52,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="@{item.lifecycle.status.toString()}"
+                android:text="@{@string/smob_list_completion(item.lifecycle.completion)}"
                 android:textColor="@color/colorAccent"
                 android:textSize="@dimen/text_size_small"
                 app:layout_constraintBottom_toBottomOf="@+id/tvListDescription"
