--- a/code/app/src/main/res/layout/fragment_planning_product_edit.xml
+++ b/code/app/src/main/res/layout/fragment_planning_product_edit.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.tanfra.shopmob.smob.ui.planning.productEdit.PlanningProductEditViewModel" />
+            type="com.tanfra.shopmob.smob.ui.planning.productList.PlanningProductListViewModel" />
     </data>
 
     <ScrollView
@@ -23,11 +23,15 @@
             android:background="@color/white">
 
             <EditText
-                android:id="@+id/smobItemTitle"
+                android:id="@+id/smobItemName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/smob_item_title"
-                android:autofillHints="@string/smob_item_title"
+                android:layout_margin="@dimen/margin_standard"
+                android:layout_marginStart="@dimen/horiz_margin_small"
+                android:layout_marginTop="@dimen/vert_margin_small"
+                android:layout_marginEnd="@dimen/horiz_margin_small"
+                android:hint="@string/smob_item_name"
+                android:autofillHints="@string/smob_item_name"
                 android:inputType="textCapSentences|textAutoCorrect"
                 android:text="@={viewModel.smobProductName}"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -39,6 +43,10 @@
                 android:id="@+id/smobItemDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="@dimen/margin_standard"
+                android:layout_marginStart="@dimen/horiz_margin_small"
+                android:layout_marginTop="@dimen/vert_margin_small"
+                android:layout_marginEnd="@dimen/horiz_margin_small"
                 android:gravity="start"
                 android:hint="@string/smob_item_desc"
                 android:autofillHints="@string/smob_item_desc"
@@ -47,36 +55,97 @@
                 android:text="@={viewModel.smobProductDescription}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/smobItemTitle"
+                app:layout_constraintTop_toBottomOf="@id/smobItemName"
                 />
 
+            <Spinner
+                android:id="@+id/smobItemMainCategory"
+                style="@style/Widget.AppCompat.Spinner"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/dropdownListPreferredItemHeight"
+                android:layout_margin="@dimen/margin_standard"
+                android:layout_marginStart="@dimen/horiz_margin_small"
+                android:layout_marginTop="@dimen/vert_margin_small"
+                android:layout_marginEnd="@dimen/horiz_margin_small"
+                android:prompt="@string/smob_item_mainCat"
+                android:background="@drawable/spinner_bg"
+                android:dropDownWidth="match_parent"
+                android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
+                android:paddingEnd="14dp"
+                android:popupBackground="@drawable/spinner_bg"
+                android:popupElevation="3dp"
+                android:stateListAnimator="@drawable/spinner_sla"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/smobItemDescription"
+                tools:ignore="RtlSymmetry" />
+
+            <Spinner
+                android:id="@+id/smobItemSubCategory"
+                style="@style/Widget.AppCompat.Spinner"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/dropdownListPreferredItemHeight"
+                android:layout_margin="@dimen/margin_standard"
+                android:layout_marginStart="@dimen/horiz_margin_small"
+                android:layout_marginTop="@dimen/vert_margin_small"
+                android:layout_marginEnd="@dimen/horiz_margin_small"
+                android:prompt="@string/smob_item_subCat"
+                android:background="@drawable/spinner_bg"
+                android:dropDownWidth="match_parent"
+                android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
+                android:paddingEnd="14dp"
+                android:popupBackground="@drawable/spinner_bg"
+                android:popupElevation="3dp"
+                android:stateListAnimator="@drawable/spinner_sla"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/smobItemMainCategory"
+                tools:ignore="RtlSymmetry" />
+
             <TextView
-                android:id="@+id/selectLocation"
+                android:id="@+id/selectShop"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="?attr/selectableItemBackground"
+                android:paddingStart="@dimen/horiz_margin_small"
+                android:layout_margin="@dimen/margin_standard"
+                android:layout_marginStart="@dimen/horiz_margin_small"
+                android:layout_marginTop="@dimen/vert_margin_small"
+                android:layout_marginEnd="@dimen/horiz_margin_small"
                 android:clickable="true"
                 android:focusable="true"
                 android:gravity="center_vertical"
-                android:text="@string/smob_item_location"
+                android:text="@string/smob_shop_prompt"
                 android:textColor="@color/black"
-                app:drawableStartCompat="@drawable/ic_location"
-                app:drawableLeftCompat="@drawable/ic_location"
+                app:drawableStartCompat="@drawable/ic_baseline_shopping_cart_24"
+                app:drawableLeftCompat="@drawable/ic_baseline_shopping_cart_24"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/smobItemDescription"
+                app:layout_constraintTop_toBottomOf="@id/smobItemSubCategory"
                 />
 
             <TextView
-                android:id="@+id/selectedLocation"
+                android:id="@+id/selectedShopName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/margin_normal"
-                android:text="@{viewModel.smobProductCategory.main.toString()}"
+                android:text="@{viewModel.selectedShop.name}"
+                android:textColor="@color/primaryColor"
+                app:layout_constraintTop_toTopOf="@id/selectShop"
+                app:layout_constraintBottom_toBottomOf="@id/selectShop"
+                app:layout_constraintEnd_toStartOf="@id/selectedShopCategory"
+                tools:text="(shop name)" />
+
+            <TextView
+                android:id="@+id/selectedShopCategory"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/margin_normal"
+                android:text="@{viewModel.selectedShop.category.toString()}"
                 android:textColor="@color/black"
-                app:layout_constraintBottom_toBottomOf="@id/selectLocation"
+                app:layout_constraintTop_toTopOf="@id/selectShop"
+                app:layout_constraintBottom_toBottomOf="@id/selectShop"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/selectLocation"
-                tools:text="Location" />
+                tools:text="SUPERMARKET" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/saveSmobItem"
