--- a/code/app/src/main/res/layout/fragment_planning_shop_edit.xml
+++ b/code/app/src/main/res/layout/fragment_planning_shop_edit.xml
@@ -19,17 +19,17 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/clPlanningShopEdit"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:background="@color/white"
             tools:context="com.tanfra.shopmob.smob.ui.planning.shopList.PlanningShopEditFragment">
 
 
         <EditText
-                android:id="@+id/smobItemTitle"
+                android:id="@+id/smobShopName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/smob_item_title"
-                android:autofillHints="@string/smob_item_title"
+                android:hint="@string/smob_shop_name"
+                android:autofillHints="@string/smob_shop_name"
                 android:inputType="textCapSentences|textAutoCorrect"
                 android:text="@={viewModel.smobShopName}"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -42,14 +42,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="start"
-                android:hint="@string/smob_item_desc"
-                android:autofillHints="@string/smob_item_desc"
+                android:hint="@string/smob_shop_desc"
+                android:autofillHints="@string/smob_shop_desc"
                 android:inputType="textCapSentences|textAutoCorrect"
                 android:lines="10"
                 android:text="@={viewModel.smobShopDescription}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/smobItemTitle"
+                app:layout_constraintTop_toBottomOf="@id/smobShopName"
                 />
 
             <TextView
@@ -60,7 +60,7 @@
                 android:clickable="true"
                 android:focusable="true"
                 android:gravity="center_vertical"
-                android:text="@string/smob_item_location"
+                android:text="@string/smob_shop_prompt"
                 android:textColor="@color/black"
                 app:drawableStartCompat="@drawable/ic_location"
                 app:drawableLeftCompat="@drawable/ic_location"
@@ -91,7 +91,7 @@
                 app:layout_anchorGravity="bottom|right|end"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:contentDescription="@string/save_smob_item" />
+                android:contentDescription="@string/save_smob_shop" />
 
             <ProgressBar
                 android:id="@+id/progressBar"
