--- a/code/app/src/main/res/values/dimens.xml
+++ b/code/app/src/main/res/values/dimens.xml
@@ -35,5 +35,8 @@
     <dimen name="image_size_large">600dp</dimen>
     <dimen name="horizontal_margin">8dp</dimen>
     <dimen name="tall_toolbar_height">56dp</dimen>
+    <dimen name="margin_standard">10dp</dimen>
+    <dimen name="horiz_margin_small">8dp</dimen>
+    <dimen name="vert_margin_small">8dp</dimen>
 
 </resources>
