Map integrated, activates geoFencing // incl. persistant storage of shop data (DB/BE)

--- a/code/app/src/main/res/layout/fragment_planning_shop_map.xml
+++ b/code/app/src/main/res/layout/fragment_planning_shop_map.xml
@@ -16,7 +16,7 @@
         android:layout_height="match_parent">
 
         <!-- map container
-             could switch to cloud basded styling by adding:
+             could switch to cloud based styling by adding:
              map:mapId="@string/cloud_styling_basic_map_id"
          -->
         <androidx.fragment.app.FragmentContainerView
