--- a/code/app/src/main/res/layout/fragment_planning_product_edit.xml
+++ b/code/app/src/main/res/layout/fragment_planning_product_edit.xml
@@ -33,7 +33,7 @@
                 android:hint="@string/smob_item_name"
                 android:autofillHints="@string/smob_item_name"
                 android:inputType="textCapSentences|textAutoCorrect"
-                android:text="@={viewModel.smobProductName}"
+                android:text="@={viewModel.selectedShop.name}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -52,7 +52,7 @@
                 android:autofillHints="@string/smob_item_desc"
                 android:inputType="textCapSentences|textAutoCorrect"
                 android:lines="10"
-                android:text="@={viewModel.smobProductDescription}"
+                android:text="@={viewModel.selectedShop.description}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/smobItemName"
@@ -121,7 +121,7 @@
                 app:drawableLeftCompat="@drawable/ic_baseline_shopping_cart_24"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/smobItemSubCategory"
-                />
+                tools:ignore="RtlSymmetry" />
 
             <TextView
                 android:id="@+id/selectedShopName"
