--- a/code/app/src/main/res/layout/fragment_planning_shop_edit.xml
+++ b/code/app/src/main/res/layout/fragment_planning_shop_edit.xml
@@ -38,7 +38,7 @@
                 />
 
             <EditText
-                android:id="@+id/smobItemDescription"
+                android:id="@+id/smobShopDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="start"
@@ -53,32 +53,46 @@
                 />
 
             <TextView
-                android:id="@+id/selectLocation"
+                android:id="@+id/defineLocation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="?attr/selectableItemBackground"
                 android:clickable="true"
                 android:focusable="true"
                 android:gravity="center_vertical"
-                android:text="@string/smob_shop_prompt"
+                android:text="@string/smob_shop_locate"
                 android:textColor="@color/black"
                 app:drawableStartCompat="@drawable/ic_location"
                 app:drawableLeftCompat="@drawable/ic_location"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/smobItemDescription"
+                app:layout_constraintTop_toBottomOf="@id/smobShopDescription"
                 />
 
+
             <TextView
-                android:id="@+id/selectedLocation"
+                android:id="@+id/selectedShopName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/margin_normal"
-                android:text="@{viewModel.smobShopType.toString()}"
+                android:text="@{viewModel.locatedShop.name}"
+                android:textColor="@color/primaryColor"
+                app:layout_constraintTop_toTopOf="@id/defineLocation"
+                app:layout_constraintBottom_toBottomOf="@id/defineLocation"
+                app:layout_constraintEnd_toStartOf="@id/selectedShopLocation"
+                tools:text="(shop name)" />
+
+            <TextView
+                android:id="@+id/selectedShopLocation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/margin_normal"
+                android:text="@{viewModel.locatedShop.category.toString()}"
                 android:textColor="@color/black"
-                app:layout_constraintBottom_toBottomOf="@id/selectLocation"
+                app:layout_constraintTop_toTopOf="@id/defineLocation"
+                app:layout_constraintBottom_toBottomOf="@id/defineLocation"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/selectLocation"
-                tools:text="Location" />
+                tools:text="SUPERMARKET" />
+
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/saveSmobItem"
