--- a/code/app/src/main/res/layout/fragment_planning_shop_map.xml
+++ b/code/app/src/main/res/layout/fragment_planning_shop_map.xml
@@ -2,7 +2,7 @@
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
@@ -38,12 +38,14 @@
             android:selectAllOnFocus="true"
             android:hint="@string/location_name"
             android:inputType="textCapSentences|textAutoCorrect"
-            android:text="@={viewModel.smobShopName}"
+            android:text="@={viewModel.locatedShop.name}"
             android:imeOptions="actionDone"
             android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@+id/btnOk"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            tools:visibility = "visible"
+            />
 
         <TextView
             android:id="@+id/btnOk"
@@ -60,7 +62,9 @@
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/btnCancel"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            tools:visibility = "visible"
+            />
 
         <TextView
             android:id="@+id/btnCancel"
@@ -77,7 +81,9 @@
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/btnOk" />
+            app:layout_constraintStart_toEndOf="@id/btnOk"
+            tools:visibility = "visible"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
