fixed product edit - list additions

--- a/code/app/src/main/res/layout/fragment_planning_lists_edit.xml
+++ b/code/app/src/main/res/layout/fragment_planning_lists_edit.xml
@@ -25,6 +25,10 @@
                 android:id="@+id/smobListName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="@dimen/margin_standard"
+                android:layout_marginStart="@dimen/horiz_margin_small"
+                android:layout_marginTop="@dimen/vert_margin_small"
+                android:layout_marginEnd="@dimen/horiz_margin_small"
                 android:hint="@string/smob_list_name"
                 android:autofillHints="@string/smob_list_name"
                 android:inputType="textCapSentences|textAutoCorrect"
@@ -38,6 +42,10 @@
                 android:id="@+id/smobListDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="@dimen/margin_standard"
+                android:layout_marginStart="@dimen/horiz_margin_small"
+                android:layout_marginTop="@dimen/vert_margin_small"
+                android:layout_marginEnd="@dimen/horiz_margin_small"
                 android:gravity="start"
                 android:hint="@string/smob_list_desc"
                 android:autofillHints="@string/smob_list_desc"
