--- a/code/app/src/main/res/layout/fragment_planning_product_edit.xml
+++ b/code/app/src/main/res/layout/fragment_planning_product_edit.xml
@@ -33,7 +33,7 @@
                 android:hint="@string/smob_item_name"
                 android:autofillHints="@string/smob_item_name"
                 android:inputType="textCapSentences|textAutoCorrect"
-                android:text="@={viewModel.selectedShop.name}"
+                android:text="@={viewModel.smobProductName}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -52,7 +52,7 @@
                 android:autofillHints="@string/smob_item_desc"
                 android:inputType="textCapSentences|textAutoCorrect"
                 android:lines="10"
-                android:text="@={viewModel.selectedShop.description}"
+                android:text="@={viewModel.smobProductDescription}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/smobItemName"
