Refactored test app for the udacity tutor

--- a/code/app/src/main/res/layout/fragment_planning_lists_edit.xml
+++ b/code/app/src/main/res/layout/fragment_planning_lists_edit.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.tanfra.shopmob.smob.ui.planning.listsEdit.PlanningListsEditViewModel" />
+            type="com.tanfra.shopmob.smob.ui.planning.lists.PlanningListsViewModel" />
     </data>
 
     <ScrollView
