--- a/code/app/src/main/res/layout/fragment_planning_product_list.xml
+++ b/code/app/src/main/res/layout/fragment_planning_product_list.xml
@@ -25,7 +25,7 @@
                 android:id="@+id/smobItemsRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:stateFlow="@{viewModel.smobListItemsWithStatus}"
+                app:stateFlow="@{viewModel.getSmobListItemsWithStatus}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -51,7 +51,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                app:fadeVisibleOnLoading="@{viewModel.smobListItems}"
+                app:fadeVisibleOnLoading="@{viewModel.getSmobListItems}"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
